README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Dylan Thomas 2015
+This software is available under the GNU General Public License.
+http://www.gnu.org/licenses/gpl.txt
+
 boot the server?
 ./node stuff.js
 
