--- a/README
+++ b/README
@@ -3,7 +3,7 @@ This software is available under the GNU General Public License.
 http://www.gnu.org/licenses/gpl.txt
 
 boot the server?
-./node stuff.js
+node server.js
 
 http Parse?
 
